# wireshark_remote

./: .gitignore  LICENSE.txt  README.md  requirements.txt  setup.cfg  setup.py  tox.ini  wireshark_fritzbox_runner.py  wireshark_ssh_runner.py
tests/: test_wireshark_remote.py
wireshark_remote/: __init__.py  fritzbox_web.py
